mcfida/c1/suspend_impl
implicit.c:821:10: error: conflicting types for 'suspend_impl'
__int64  suspend_impl( network_t *net, cost_t threshold, __int64 all) 
         ^
./implicit.h:31:13: note: previous declaration is here
extern long suspend_impl _PROTO_(( network_t *, cost_t, long ));
            ^
implicit.c:869:17: error: expected expression
v7 = *( _OWORD *)&v5->cost; 
                ^
implicit.c:869:9: error: use of undeclared identifier '_OWORD'
v7 = *( _OWORD *)&v5->cost; 
        ^
implicit.c:870:17: error: expected expression
v8 = *( _OWORD *)&v5->head; 
                ^
implicit.c:870:9: error: use of undeclared identifier '_OWORD'
v8 = *( _OWORD *)&v5->head; 
        ^
implicit.c:871:17: error: expected expression
v9 = *( _OWORD *)&v5->nextout; 
                ^
implicit.c:871:9: error: use of undeclared identifier '_OWORD'
v9 = *( _OWORD *)&v5->nextout; 
        ^
implicit.c:872:12: error: expected expression
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
           ^
implicit.c:872:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
   ^
implicit.c:872:36: error: expected expression
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
                                   ^
implicit.c:872:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
                           ^
implicit.c:873:12: error: expected expression
*( _OWORD *)&v6->nextout = v9; 
           ^
implicit.c:873:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->nextout = v9; 
   ^
implicit.c:874:12: error: expected expression
*( _OWORD *)&v6->head = v8; 
           ^
implicit.c:874:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->head = v8; 
   ^
implicit.c:875:12: error: expected expression
*( _OWORD *)&v6->cost = v7; 
           ^
implicit.c:875:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->cost = v7; 
   ^
17 errors generated.
